# Pharma-Connect

./: .env.example  .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  setup.sh  start.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  chat.py  distributor.py  medication.py  offer.py  order.py  order_event.py  pharmacy.py  user.py
backend/app/routers/: admin.py  auth.py  chatbot.py  medications.py  notifications.py  offers.py  orders.py  ranking.py  stock_forecast.py  users.py
backend/app/schemas/: auth.py  chat.py  medication.py  offer.py  order.py
backend/app/seeds/: medications.json  seed.py
backend/app/services/: chatbot.py  email.py  notifications.py  order_state.py  ranking.py  retrieval.py  stock_forecast.py
backend/app/tests/: conftest.py  test_order_state.py  test_ranking.py  test_retrieval.py  test_stock_forecast.py
docs/: ERD.md  chatbot-design.md  order-state-machine.md  ranking-algorithm.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: admin.ts  auth.ts  chatbot.ts  client.ts  forecast.ts  medications.ts  offers.ts  orders.ts  types.ts
frontend/src/auth/: AuthContext.tsx  RequireRole.tsx
frontend/src/components/: AppLayout.tsx  EmptyState.tsx  StatusBadge.test.tsx  StatusBadge.tsx
frontend/src/i18n/: en.json  (+1 more)
(+16 files in other folders)
