[project]
name = "pharma-connect-backend"
version = "0.1.0"
description = "Pharma Connect backend: FastAPI service for the B2B pharmacy/distributor platform."
requires-python = ">=3.11"

# Pinned to a single working set so the student can reproduce installs exactly.
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.12",
    "email-validator==2.2.0",
    "httpx==0.27.2",
    "sse-starlette==2.1.3",
    "fastapi-mail==1.4.1",
    "anthropic==0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
